Bug 221023 - [MFC] r321410: fix for compat handling of interrupts in bmake
Summary: [MFC] r321410: fix for compat handling of interrupts in bmake
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 11.0-STABLE
Hardware: Any Any
: --- Affects Many People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks: 215572
  Show dependency treegraph
 
Reported: 2017-07-26 14:29 UTC by ru_M1cRO
Modified: 2017-08-03 12:50 UTC (History)
3 users (show)

See Also:
rum1cro: mfc-stable11?
rum1cro: mfc-stable10?


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ru_M1cRO 2017-07-26 14:29:18 UTC
Need merge base r321410 from current to 11-STABLE bmake-20170720 for fix compat handling of interrupts in bmake. It related with bug #215572.
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-07-28 15:43:47 UTC
A commit references this bug:

Author: sjg
Date: Fri Jul 28 15:43:38 UTC 2017
New revision: 321653
URL: https://svnweb.freebsd.org/changeset/base/321653

Log:
  MFC bmake-20170720

  PR: 221023

Changes:
_U  stable/11/
  stable/11/contrib/bmake/ChangeLog
  stable/11/contrib/bmake/Makefile
  stable/11/contrib/bmake/bmake.1
  stable/11/contrib/bmake/bmake.cat1
  stable/11/contrib/bmake/buf.h
  stable/11/contrib/bmake/compat.c
  stable/11/contrib/bmake/dir.h
  stable/11/contrib/bmake/hash.h
  stable/11/contrib/bmake/job.c
  stable/11/contrib/bmake/main.c
  stable/11/contrib/bmake/make.1
  stable/11/contrib/bmake/make.h
  stable/11/contrib/bmake/meta.c
  stable/11/contrib/bmake/mk/ChangeLog
  stable/11/contrib/bmake/mk/dirdeps.mk
  stable/11/contrib/bmake/mk/install-mk
  stable/11/contrib/bmake/mk/lib.mk
  stable/11/contrib/bmake/mk/meta.stage.mk
  stable/11/contrib/bmake/mk/meta.sys.mk
  stable/11/contrib/bmake/mk/meta2deps.py
  stable/11/contrib/bmake/mk/own.mk
  stable/11/contrib/bmake/nonints.h
  stable/11/contrib/bmake/sprite.h
  stable/11/usr.bin/bmake/Makefile
  stable/11/usr.bin/bmake/Makefile.inc
Comment 2 ru_M1cRO 2017-07-31 17:51:15 UTC
I think we need merge it to 10-STABLE too.
Comment 3 commit-hook freebsd_committer freebsd_triage 2017-08-03 01:40:55 UTC
A commit references this bug:

Author: sjg
Date: Thu Aug  3 01:40:05 UTC 2017
New revision: 321964
URL: https://svnweb.freebsd.org/changeset/base/321964

Log:
  MFC bmake-20170720

  PR: 221023

Changes:
_U  stable/10/
  stable/10/contrib/bmake/ChangeLog
  stable/10/contrib/bmake/Makefile
  stable/10/contrib/bmake/PSD.doc/tutorial.ms
  stable/10/contrib/bmake/README
  stable/10/contrib/bmake/arch.c
  stable/10/contrib/bmake/bmake.1
  stable/10/contrib/bmake/bmake.cat1
  stable/10/contrib/bmake/boot-strap
  stable/10/contrib/bmake/buf.h
  stable/10/contrib/bmake/compat.c
  stable/10/contrib/bmake/cond.c
  stable/10/contrib/bmake/config.h.in
  stable/10/contrib/bmake/configure
  stable/10/contrib/bmake/configure.in
  stable/10/contrib/bmake/dir.c
  stable/10/contrib/bmake/dir.h
  stable/10/contrib/bmake/dirname.c
  stable/10/contrib/bmake/for.c
  stable/10/contrib/bmake/getopt.c
  stable/10/contrib/bmake/hash.h
  stable/10/contrib/bmake/job.c
  stable/10/contrib/bmake/main.c
  stable/10/contrib/bmake/make-bootstrap.sh.in
  stable/10/contrib/bmake/make.1
  stable/10/contrib/bmake/make.c
  stable/10/contrib/bmake/make.h
  stable/10/contrib/bmake/make_malloc.c
  stable/10/contrib/bmake/meta.c
  stable/10/contrib/bmake/meta.h
  stable/10/contrib/bmake/mk/ChangeLog
  stable/10/contrib/bmake/mk/FILES
  stable/10/contrib/bmake/mk/auto.dep.mk
  stable/10/contrib/bmake/mk/auto.obj.mk
  stable/10/contrib/bmake/mk/autodep.mk
  stable/10/contrib/bmake/mk/dirdeps.mk
  stable/10/contrib/bmake/mk/doc.mk
  stable/10/contrib/bmake/mk/dpadd.mk
  stable/10/contrib/bmake/mk/files.mk
  stable/10/contrib/bmake/mk/final.mk
  stable/10/contrib/bmake/mk/gendirdeps.mk
  stable/10/contrib/bmake/mk/inc.mk
  stable/10/contrib/bmake/mk/init.mk
  stable/10/contrib/bmake/mk/install-mk
  stable/10/contrib/bmake/mk/lib.mk
  stable/10/contrib/bmake/mk/libnames.mk
  stable/10/contrib/bmake/mk/meta.autodep.mk
  stable/10/contrib/bmake/mk/meta.stage.mk
  stable/10/contrib/bmake/mk/meta.sys.mk
  stable/10/contrib/bmake/mk/meta2deps.py
  stable/10/contrib/bmake/mk/meta2deps.sh
  stable/10/contrib/bmake/mk/mkopt.sh
  stable/10/contrib/bmake/mk/nls.mk
  stable/10/contrib/bmake/mk/own.mk
  stable/10/contrib/bmake/mk/prog.mk
  stable/10/contrib/bmake/mk/scripts.mk
  stable/10/contrib/bmake/mk/subdir.mk
  stable/10/contrib/bmake/mk/sys/AIX.mk
  stable/10/contrib/bmake/mk/sys/Darwin.mk
  stable/10/contrib/bmake/mk/sys/Generic.mk
  stable/10/contrib/bmake/mk/sys/HP-UX.mk
  stable/10/contrib/bmake/mk/sys/IRIX.mk
  stable/10/contrib/bmake/mk/sys/Linux.mk
  stable/10/contrib/bmake/mk/sys/NetBSD.mk
  stable/10/contrib/bmake/mk/sys/OSF1.mk
  stable/10/contrib/bmake/mk/sys/OpenBSD.mk
  stable/10/contrib/bmake/mk/sys/SunOS.mk
  stable/10/contrib/bmake/mk/sys/UnixWare.mk
  stable/10/contrib/bmake/mk/sys.clean-env.mk
  stable/10/contrib/bmake/mk/sys.debug.mk
  stable/10/contrib/bmake/mk/sys.dependfile.mk
  stable/10/contrib/bmake/mk/sys.mk
  stable/10/contrib/bmake/mk/sys.vars.mk
  stable/10/contrib/bmake/mk/warnings.mk
  stable/10/contrib/bmake/nonints.h
  stable/10/contrib/bmake/os.sh
  stable/10/contrib/bmake/parse.c
  stable/10/contrib/bmake/sprite.h
  stable/10/contrib/bmake/str.c
  stable/10/contrib/bmake/suff.c
  stable/10/contrib/bmake/targ.c
  stable/10/contrib/bmake/unit-tests/export-env.exp
  stable/10/contrib/bmake/unit-tests/export-env.mk
  stable/10/contrib/bmake/unit-tests/modmatch.exp
  stable/10/contrib/bmake/unit-tests/modmatch.mk
  stable/10/contrib/bmake/unit-tests/modts.exp
  stable/10/contrib/bmake/unit-tests/modts.mk
  stable/10/contrib/bmake/unit-tests/varmisc.exp
  stable/10/contrib/bmake/unit-tests/varmisc.mk
  stable/10/contrib/bmake/var.c
  stable/10/usr.bin/bmake/Makefile
  stable/10/usr.bin/bmake/Makefile.inc
  stable/10/usr.bin/bmake/config.h
Comment 4 ru_M1cRO 2017-08-03 12:50:14 UTC
Thank you!
Comment 5 ru_M1cRO 2017-08-03 12:50:27 UTC
Thank you!