MFC bmake-20170720

PR: 221023

Former-commit-id: 4cfcb832674a4bf857f4a24a8aac452754772a95